01 - OpenCRVS Documentation/v1.3/product-specifications/core-functions/6.-search-for-a-record.md
---
title: "6. Search for a record"
source_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/6.-search-for-a-record"
markdown_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/6.-search-for-a-record.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:3113947bd2bf6dfd8f4de6ce2d63d8154204d83300a60215c1c22c756fad53bb"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/6.-search-for-a-record.md).

# 6. Search for a record

Civil registration systems must be able to store, file, archive and retrieve records. OpenCRVS enables users to search by a number of different criteria, reducing the search scope for a better user experience.

### **Pre-condition**

A record exist in the system with the status ‘In review’, ‘Validated’, ‘Registered’, ‘Requires Updates’, ‘Registered’, ‘Certified’, ‘Issued’, ‘Archived’

### **Triggers**

A user choose the search term and enters a query

### **Standard flow**

1. User choose the type of search (Tracking ID, Registration No. National ID, Phone number)
2. User enters in search query
3. If user has a connection then the system will process the search query
4. Any results are displayed

### **Post conditions**

* User can then choose to assign themselves to the record and complete the required action
* User can choose to view the record audit for the record
* User can choose to view the record (read only)

### **Variations/Exceptions**

If the user does not have a unique identifier such as a tracking ID or registration no. then they can use **Advanced search**.

Advance search lets you search for a record by:

* Record status eg. Registered or Issued
* Place of registration
* Date of registration
* Using different parameters captured in the form eg. Child, Mother or Fathers details

An advanced search query can also be favourited. Which will add a shortcut to the user’s side nav. This is useful if a user for instance wants to see all records from a District with the status Registered. In a sense this allows a user to create custom workqueues.

{% embed url="<https://www.loom.com/share/3abac0ac02cc4dcf8db0cfe221064e6e?sid=d272f3ff-58c0-49ff-8073-4b4cb1280723>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/6.-search-for-a-record.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
